# NTIndex

./: .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  merge_list.txt  pyproject.toml
.github/workflows/: pages.yml
examples/: feed.xml  videos.json
src/ntindex/: __init__.py  builder.py  cli.py  crawler.py  db.py  parser.py
src/ntindex/templates/: _footer.html.j2  game.html.j2  index.html.j2
tests/: test_cli.py  test_db_builder.py  test_feed_crawler.py  test_parser.py
