[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ntindex"
version = "0.1.0"
description = "Static index generator for NeonTeam model-swap videos."
readme = "SPEC.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ntindex = "ntindex.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
